--- a/app/partials/child_dental.html
+++ b/app/partials/child_dental.html
@@ -1,34 +1,121 @@
-<link rel="stylesheet" href="css/child_dental.css?rev=a9804facf9b508f84110afc8a68d7d20">
+<link rel="stylesheet" href="css/child_dental.css?rev=c453f9f8ed41e0343879e1ad7b06db08">
 
 <div class="child-dental-container">
-	<img src="img/child_dental/banner.png">
+    <!--  第一页-->
+	<img src="img/child_dental/index_banner.png">
 	<div class="child-dental-container_introl">
 		<div class="child-dental-container_introl--company">诺贝泰康少儿齿科保障计划</div>
 		<div class="orange child-dental-container_introl--price">318元/年起</div>
-
 	</div>
+    <div class="child-dental-container_word">让宝宝享受专业的口腔检查、虫牙预防、龋齿治疗、咬合畸形检查，无需体检，无等待期，当日购买即可预约就诊。</div>
+    <div class="kong"></div>
+    <div class="child-dental-container_setMeal"> 
+        <div class="child-dental-container_setMeal--word">选择套餐：套餐A 瑞泰/普尔-基础保健套餐</div>
+        <div><i class="iconfont" style="color: #e2e2e2;font-size: 15px;">&#xe60f;</i></div>
+    </div>
+    <div class="kong"></div>
 	<!--  第二页-->
     <div class="main-list">
     	<!-- table切换 -->
-    	<ul class="switch" id="switch">
-    		<li class="border_3px">简 介</li>
-    		<li>套 餐</li>
-    		<li>合作医院</li>
-    	</ul>
-    	<!-- 简介 -->
-    	<!-- 套餐 -->
-    	<div class="main-list_intro">
-    		<img src="img/child_dental/1.png">
-    		<img src="img/child_dental/1-1.png">
-    		<img src="img/child_dental/2.png">
-    		<img src="img/child_dental/2-1.png">
-    		<img src="img/child_dental/3.png">
-    		<img src="img/child_dental/3-1.png">
+    	<div class="switch" id="switch">
+    		<div class="switch-child border_3px">简 介</div>
+    		<div class="switch-child">套 餐</div>
+    		<div class="switch-child">合作医院</div>
     	</div>
-    	<img src="img/child_dental/yuyue.png" alt="">
-    	<img class="border_bottom" src="img/child_dental/yuyue_word.png" alt="">
-    	<!-- 合作医院 -->
 
+    	<!-- 简介 -->
+        <div class="main-list-profile" id="jianjie">
+            <div class="main-list-profile_professor">专家提醒</div>
+            <img src="img/child_dental/profile/profile_1.png">
+            <div class="main-list-profile_word main-list-profile_word--padd">乳牙不好，恒牙就长不好</div>
+            <img src="img/child_dental/profile/profile_2.png">
+             <div class="main-list-profile_word">乳牙需要使用5~10年<br/>对宝宝健康影响重大</div>
+            <img src="img/child_dental/profile/profile_3.png">
+            <div class="main-list-profile_word">牙疼影响宝宝的快乐<br/>牙齿难看影响宝宝的自信</div>
+            <div class="main-list-profile_problem">
+                <div class="main-list-profile_problem_paddBottom">针对三大问题</div>
+                <img src="img/child_dental/profile/profile_4.png">
+            </div>
+             <div class="main-list_intro" >
+                <img src="img/child_dental/1.png">
+                <img src="img/child_dental/1-1.png">
+                <img src="img/child_dental/2.png">
+                <img src="img/child_dental/2-1.png">
+                <img src="img/child_dental/3.png">
+                <img src="img/child_dental/3-1.png">
+            </div>  
+            <img src="img/child_dental/yuyue.png">
+            <img class="border_bottom" src="img/child_dental/yuyue_word.png">
+        </div>
+       
+    	<!-- 套餐 -->
+    	<div class="main-list_intro" id="taocan" style="display: none;">
+            <img src="img/child_dental/package/package_1.png">
+            <img src="img/child_dental/package/package_2.png">
+            <img src="img/child_dental/package/package_1.png">
+            <img src="img/child_dental/package/package_2.png">
+            <img src="img/child_dental/package/package_1.png">
+            <img src="img/child_dental/package/package_2.png">
+        </div><!-- <div class="kong"></div> -->
+        
+
+    	<!-- 合作医院 -->
+        <div class="main-list_hospital" id="yiyuan" style="display: none;">
+            <div class="main-list_hospital_box">
+                <div class="main-list_hospital_box_tit"><span class="num_blue">3</span>家知名口腔医院 <span class="num_blue">24</span>家诊所</div>
+                <!-- 医院logo and detail -->
+                <div class="main-list_hospital_list">
+                    <img src="img/child_dental/hospital/hos_logo.png">
+                    <div>
+                        <div class="hospital_name">瑞泰口腔</div>
+                        <div class="hospital_name_detail">瑞尔齿科旗下中端品牌，曾经获得"最佳医疗服务连锁机构奖"，"最受百姓信赖的健康品牌”。</div>
+                    </div>
+                </div>
+                <div class="shop_detail"><div class="shop">北京<span>7</span>家门店</div><div><a href="javascript:"></a>点击查看</div></div>
+                 <div class="main-list_hospital_list">
+                    <img src="img/child_dental/hospital/hos_logo.png">
+                    <div>
+                        <div class="hospital_name">瑞泰口腔</div>
+                        <div class="hospital_name_detail">瑞尔齿科旗下中端品牌，曾经获得"最佳医疗服务连锁机构奖"，"最受百姓信赖的健康品牌”。</div>
+                    </div>
+                </div>
+                <div class="shop_detail"><div class="shop">北京<span>7</span>家门店</div><div><a href="javascript:"></a>点击查看</div></div>
+                 <div class="main-list_hospital_list">
+                    <img src="img/child_dental/hospital/hos_logo.png">
+                    <div>
+                        <div class="hospital_name">瑞泰口腔</div>
+                        <div class="hospital_name_detail">瑞尔齿科旗下中端品牌，曾经获得"最佳医疗服务连锁机构奖"，"最受百姓信赖的健康品牌”。</div>
+                    </div>
+                </div>
+                <div class="shop_detail"><div class="shop">北京<span>7</span>家门店</div><div><a href="javascript:"></a>点击查看</div></div>
+            </div>
+            <div class="main-list_hospital_doctor">
+                <div class="main-list_hospital_doctor_tit">权威的儿童口腔医生</div>
+                <div class="main-list_hospital_doctor_pic">
+                    <div class="docter_detail">
+                        <div class="docter_pic"><img src="img/child_dental/docter/docter.png"></div>
+                        <div class="docter_name">张蕊</div>
+                        <div class="docter_detail-word">瑞泰口腔总医院专业儿科医师</div>
+                    </div>
+                    <div class="docter_detail">
+                        <div class="docter_pic"><img src="img/child_dental/docter/docter.png"></div>
+                        <div class="docter_name">张蕊</div>
+                        <div class="docter_detail-word">瑞泰口腔总医院</div>
+                        <div>专业儿科医师</div>
+                    </div>
+                    <div class="docter_detail docter_detail--last">
+                        <div class="docter_pic"><img src="img/child_dental/docter/docter.png"></div>
+                        <div class="docter_name">张蕊</div>
+                        <div class="docter_detail-word">瑞泰口腔总医院专业儿科医师</div>
+                    </div>
+                </div>
+            </div>
+            <div class="kong"></div>
+            <!-- 合作医院环境 -->
+            <img src="img/child_dental/huanjing/huanjing_1.png">
+            <img src="img/child_dental/huanjing/huanjing_2.png">
+            <div class="kong"></div>
+        </div>
 	</div>
 	<footer>
 		<div class="footer-first"><i class="iconfont" style="font-size: 20px;color: #999;">&#xe61c;</i></div>
@@ -37,9 +124,36 @@
 	</footer>
 </div>
 <script>
-	$("#switch li").click(function(){
-		$("#switch").find("li").removeClass("border_3px");
-		$(this).addClass("border_3px");
+	$("#switch .switch-child").click(function(){
+		$("#switch").find(".switch-child").removeClass("border_3px");
+		$(this).addClass("border_3px").show();
 		// $("#switch").find("li").addClass("blue");
+
 	});
+  
+   $(window).scroll(function(){
+      var y=$(document).scrollTop();
+      if(y> $(window).height()){
+        $('#switch').addClass('position');
+      }else{
+        $('#switch').removeClass('position');
+      }  
+      // console.log(y);
+      // console.log($(window).height());
+    })
+    $("#switch .switch-child:eq(1)").click(function(){
+        $("#taocan").show();
+        $("#jianjie").hide();
+        $("#yiyuan").hide();
+    });
+    $("#switch .switch-child:eq(2)").click(function(){
+        $("#yiyuan").show();
+        $("#jianjie").hide();
+        $("#taocan").hide();
+    });
+    $("#switch .switch-child:eq(0)").click(function(){
+        $("#jianjie").show();
+        $("#yiyuan").hide();
+        $("#taocan").hide();
+    });
 </script>
