--- a/app/css/teeth_reservation_detail.css
+++ b/app/css/teeth_reservation_detail.css
@@ -112,6 +112,8 @@
         height: 200%;
         -webkit-transform: scale(1/3);
         transform: scale(1/3); } }
+.reservation-body-container {
+  padding-top: 10px; }
 .reservation-body-item {
   padding: 0px 40px;
   line-height: 1.9;
@@ -151,14 +153,16 @@
         height: 200%;
         -webkit-transform: scale(1/3);
         transform: scale(1/3); } }
+.reservation-body-item_left:after {
+  top: 20px; }
 .showtip {
-  width: 15px;
-  height: 15px;
+  width: 8px;
+  height: 8px;
   border-radius: 100%;
   background-color: #4285f4;
   position: absolute;
-  left: -7.5px;
-  top: 0;
+  left: -3px;
+  top: 10px;
   z-index: 1000; }
 .reservation-body-item_right {
   -webkit-box-flex: 1;
@@ -166,7 +170,7 @@
   -moz-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
-   }
+  margin-bottom: 10px; }
 .reservation-body-item_title {
   color: #4285f4; }
 .reservation-footer {
