--- a/app/partials/teeth_reservation_detail.html
+++ b/app/partials/teeth_reservation_detail.html
@@ -1,10 +1,9 @@
-<link rel="stylesheet" href="css/teeth_reservation_detail.css?rev=fac6786f88882c3149c2836ea2572256">
-
+<link rel="stylesheet" href="css/teeth_reservation_detail.css?rev=8e17067c1f8ab1e0b9063c39291e990c">
 <div class="teeth-detail-wrapper">
 
 	<div class="teeth-title-container">
 			 
-			 <div class="teeth-title-contaienr_title"><div class="teeth-tip"></div>少儿齿科保险治疗套餐</div>
+			 <div class="teeth-title-contaienr_title"><div class="teeth-tip"></div>少儿齿科保险治疗套餐afasdfasdfasd</div>
 			 <div class="teeth-title-contaienr_des"><span class="teeth-gray">保 单 号：</span>20174123412312312312</div>
 			 <div class="teeth-title-contaienr_des"><span class="teeth-gray">被 保 人：</span>王宝宝</div>
 			 <div class="teeth-title-contaienr_des"><span class="teeth-gray">保险时间：</span>2016年09月01日~2017年08月31日</div>
@@ -47,7 +46,6 @@
 			</li>				
 		</ul>
 	</div>
-
 	<div class="reservation-footer">
 		<div class="ybwx-btn ybwx-btn--primary">复诊</div>
 	</div>
