--- a/app/sass/teeth_reservation_detail.scss
+++ b/app/sass/teeth_reservation_detail.scss
@@ -2,7 +2,7 @@
 * @Author: fanzhang
 * @Date:   2016-08-30 15:59:00
 * @Last Modified by:   fanzhang
-* @Last Modified time: 2016-08-31 11:17:33
+* @Last Modified time: 2016-08-31 16:00:39
 */
 
 @import "base/classes.scss";
@@ -46,8 +46,8 @@
 	@include border(0 0 1px 0, #ccc);
 	background-color: #FFF;
 	margin-bottom:15px;
+	overflow:hidden;
 }
-
 
 .reservation-body_title{
 	padding-left:10px;
@@ -100,10 +100,9 @@
 
 
 
-
-
 .reservation-footer{
 	@include border(1px 0 0 0, #e2e2e2);
+	box-sizing:border-box;
 	position:fixed;
 	bottom:0;
 	width:100%;
