simple auto commit

--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="/css/temai_index.css?rev=6f0efffeeee9c01550c5619f39f3b847">
 <style>
 .swiper-container{
 	line-height:0;
