simple auto commit

--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -194,8 +194,8 @@
 	<div class="sx-bzts_bottom-word" style="">
 		投保金额 <span class="buttom_money">{{money}}</span> 元
 	</div>
-	<div class="sx-bzts_bottom-btn btn_n_primary liji right"  style="background-color:#999">立即投保</div>
-	<!-- <div class="sx-bzts_bottom-btn btn_n_primary liji right" ng-click="submit()" style="background-color:#999">立即投保</div> -->
+	<!-- <div class="sx-bzts_bottom-btn btn_n_primary liji right"  style="background-color:#999">立即投保</div> -->
+	<div class="sx-bzts_bottom-btn btn_n_primary liji right" ng-click="submit()" style="background-color:#999">立即投保</div>
 </div>
 <!-- 如果是阳光的保险，投保需要走特殊接口。。。。。。-->
 <div class="sx-bzts_bottom" ng-if="data.mobile">
