simple auto commit

--- a/app/template/new/product_210.html
+++ b/app/template/new/product_210.html
@@ -8,7 +8,7 @@
 		<div class="introd-container">
 			<div class="detail-container">
 			  <div>
-				<img src="/img/product/ckbx01.png" ></div>
+				<img src="/img/product/ckbx02.png" ></div>
 			</div>
 		</div>
 		<!--
@@ -41,15 +41,15 @@
 		<div class="showknow-container" style="display: none;">
 			<div class="know-content">
 			<h4>1.投保年龄</h4>
-			<p>本产品投保年龄为1周岁—1周岁（含1、18周岁）。</p>
+			<p>本产品投保年龄为1周岁—18周岁（含1、18周岁）。</p>
 			<h4>2.保险期间</h4>
 			<p>本产品的保险期间为一年，一年内都可以进行预约就诊。</p>
 			<h4>3.等待期</h4>
-			<p>该产品无等待期，您支付成功后当日即可提交预约申请。</p>
+			<p>本产品无等待期，支付成功后当日即可提交预约申请。</p>
 			<h4 class="hide">4.投保地区 </h4>
 			<p class="hide">本产品不限投保地区，但仅限在北京、上海、广州的指定医院使用。</p>
 			<h4 class="hide">5.电子保单</h4>
-			<p class="hide">本产品提供电子保单，您投保成功后，可在泰康在线官网下载电子保单。http://www.tk.cn/webquery/</p>
+			<p class="hide">本产品提供电子保单，投保成功后，可在泰康在线官网下载电子保单。http://www.tk.cn/webquery/</p>
 
 
 			</div>
@@ -67,7 +67,7 @@
 			<ul >
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>这款产品有没有等待期吗？</div>	</div>	
+				<div class="qa-content"><div>这款产品有没有等待期？</div>	</div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
