--- a/app/sass/globe.scss
+++ b/app/sass/globe.scss
@@ -511,18 +511,24 @@ overflow: hidden;
   color: #fff;
 }
 /* svg 图标库*/
+// @font-face {
+//   font-family: 'iconfont';
+//   src: url('//at.alicdn.com/t/font_1472091381_5453997.eot'); /* IE9*/
+//   src: url('//at.alicdn.com/t/font_1472091381_5453997.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//   url('//at.alicdn.com/t/font_1472091381_5453997.woff') format('woff'), /* chrome、firefox */
+//   url('//at.alicdn.com/t/font_1472091381_5453997.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+//   url('//at.alicdn.com/t/font_1472091381_5453997.svg#iconfont') format('svg'); /* iOS 4.1- */
+// }
+                    
+                    
 @font-face {
   font-family: 'iconfont';
-  src: url('//at.alicdn.com/t/font_1472091381_5453997.eot'); /* IE9*/
-  src: url('//at.alicdn.com/t/font_1472091381_5453997.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('//at.alicdn.com/t/font_1472091381_5453997.woff') format('woff'), /* chrome、firefox */
-  url('//at.alicdn.com/t/font_1472091381_5453997.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url('//at.alicdn.com/t/font_1472091381_5453997.svg#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('//at.alicdn.com/t/font_1472696187_231151.eot'); /* IE9*/
+  src: url('//at.alicdn.com/t/font_1472696187_231151.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('//at.alicdn.com/t/font_1472696187_231151.woff') format('woff'), /* chrome、firefox */
+  url('//at.alicdn.com/t/font_1472696187_231151.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('//at.alicdn.com/t/font_1472696187_231151.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
-                    
-                    
-
-
 
                     
 .iconfont{
