--- a/app/partials/teeth_reservation_list.html
+++ b/app/partials/teeth_reservation_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/teeth_reservation_list.css?rev=a475e3d9e53906b5c9e067a68b970524">
+<link rel="stylesheet" href="css/teeth_reservation_list.css?rev=bdea70541250f848f16707642e9b8692">
 
 
 <div class="teeth_reservation_container" data-ng-init="init()"  cg-busy="secondPromise">
@@ -55,7 +55,7 @@
 					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>窝沟封闭1颗</div>
 					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>乳牙拔出1颗</div>
 					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>虫牙填充1颗</div>
-					<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>根管治疗(深龋)2颗</div>
+					<div class="teeth-content_item teeth-content_item--gray"><i class="iconfont teeth-content_item_ok " >&#xe634;</i>根管治疗(深龋)2颗</div>
 						<div class="teeth-content_item"><div class="teeth-content_item_pointer"></div>根管治疗(深龋)2颗</div>
 				</div>
 			</div>
