--- a/app/css/teeth_reservation_detail.css
+++ b/app/css/teeth_reservation_detail.css
@@ -154,17 +154,57 @@
         height: 200%;
         -webkit-transform: scale(1/3);
         transform: scale(1/3); } }
+  .reservation-body-item_left .showtip {
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
+    background-color: #4285f4;
+    position: absolute;
+    left: -3px;
+    top: 10px;
+    z-index: 1000; }
+.reservation-body-item_gray {
+  width: 40px;
+  padding: 10px;
+  position: relative;
+  position: relative; }
+  .reservation-body-item_gray::after {
+    pointer-events: none;
+    position: absolute;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    content: "\0020";
+    border-color: #ccc;
+    border-style: solid;
+    border-width: 0 0 0 1px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0; }
+    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      .reservation-body-item_gray::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5); } }
+    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+      .reservation-body-item_gray::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(1/3);
+        transform: scale(1/3); } }
+  .reservation-body-item_gray .showtip {
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
+    background-color: #ccc;
+    position: absolute;
+    left: -3px;
+    top: 10px;
+    z-index: 1000; }
 .reservation-body-item_left:after {
   top: 20px; }
-.showtip {
-  width: 8px;
-  height: 8px;
-  border-radius: 100%;
-  background-color: #4285f4;
-  position: absolute;
-  left: -3px;
-  top: 10px;
-  z-index: 1000; }
 .reservation-body-item_right {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
@@ -180,7 +220,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  padding: 10px; }
+  padding: 10px 20px; }
   .reservation-footer::after {
     pointer-events: none;
     position: absolute;
