--- a/app/sass/teeth_reservation_detail.scss
+++ b/app/sass/teeth_reservation_detail.scss
@@ -2,7 +2,7 @@
 * @Author: fanzhang
 * @Date:   2016-08-30 15:59:00
 * @Last Modified by:   fanzhang
-* @Last Modified time: 2016-09-01 10:06:27
+* @Last Modified time: 2016-09-01 17:56:03
 */
 
 @import "base/classes.scss";
@@ -76,22 +76,40 @@
 	// }
 	 @include border(0 0 0 1px, #e2e2e2);
 	 position:relative;
+	 .showtip{
+		width:8px;
+		height:8px;
+		border-radius:100%;
+		background-color: #4285f4;
+		position:absolute;
+		left:-3px;
+		top:10px;
+		z-index:1000;
+	}
 }
+.reservation-body-item_gray{
+	width:40px;
+	padding:10px;
 
+	 @include border(0 0 0 1px, #ccc);
+	 position:relative;
+	 .showtip{
+		width:8px;
+		height:8px;
+		border-radius:100%;
+		background-color: #ccc;
+		position:absolute;
+		left:-3px;
+		top:10px;
+		z-index:1000;
+	}
+
+}
 .reservation-body-item_left:after{
 	top:20px;
 }
 
-.showtip{
-	width:8px;
-	height:8px;
-	border-radius:100%;
-	background-color: #4285f4;
-	position:absolute;
-	left:-3px;
-	top:10px;
-	z-index:1000;
-}
+
 
 .reservation-body-item_right{
 	@include flex(1);
@@ -110,5 +128,5 @@
 	position:fixed;
 	bottom:0;
 	width:100%;
-	padding:10px;
+	padding:10px 20px;
 }
